--- a/view/user/partials/footer.ejs
+++ b/view/user/partials/footer.ejs
@@ -77,8 +77,8 @@
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             Copyright &copy;
                             <script>document.write(new Date().getFullYear());</script> All rights reserved | This
-                            template is made with <i class="ti-heart" aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                            template is made by <a
+                                href="https://github.com/mishalBasheer/Hourglass" target="_blank">Mishal</a>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </P>
                     </div>
