added footer links to icons

--- a/view/user/partials/footer.ejs
+++ b/view/user/partials/footer.ejs
@@ -86,10 +86,10 @@
                 <div class="col-lg-4">
                     <div class="footer_icon social_icon">
                         <ul class="list-unstyled">
-                            <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
-                            <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                            <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                            <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
+                            <li><a href="https://github.com/mishalBasheer" class="single_social_icon"><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/mishalmohammed/" class="single_social_icon"><i class="fab fa-linkedin"></i></a></li>
+                            <li><a href="https://twitter.com/mishal2mk2michu" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="https://mishalbasheer.github.io/PersonalWeb/" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
                         </ul>
                     </div>
                 </div>
