home brand image update

--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -381,7 +381,7 @@
       <div class="col-lg-12">
         <% brands.forEach((e,i) => { %>
             <div class="single_client_logo">
-              <a href="/shop/brand/<%= e._id %>"><img src="/brand_img/<%= e.image %> " alt="..." width="120p" height="70px"/></a>
+              <a href="/shop/brand/<%= e._id %>"><img src="/brand_img/<%= e.image %> " alt="..." width="120p"/></a>
             </div>
           <% }) %>
       </div>
