--- a/view/user/order_confirmation.ejs
+++ b/view/user/order_confirmation.ejs
@@ -98,10 +98,7 @@
             <button type="button" class="btn btn-dark btn-lg btn-block mt-3">Cash On Delivery</button>
           </a>
           <a href="#">
-            <button type="button" id="rzp-button1" class="btn btn-warning btn-lg btn-block mt-3">Pay</button>
-          </a>
-          <a href="#">
-            <button type="button" class="btn btn-primary btn-lg btn-block mt-3">Paypal</button>
+            <button type="button" id="rzp-button1" class="btn btn-warning btn-lg btn-block mt-3"><img src="/images/pngegg.png" alt=""></button>
           </a>
         </div>
       </div>
